--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=5000
-mongoURI=mongodb+srv://devanshdev007:dev@tutorfinder.gwph4.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+mongoURI=""
 RAZOR_PAY_KEY_ID = rzp_test_hv6LKzFbQ6yQcc
 RAZOR_PAY_KEY_SECRET = QKJVDymkDXhIVnkhYvWw7E3L
 
-Email_User_id=babarangeela42@gmail.com
-Password=rangeela@123
+Email_User_id=""
+Password=""
