--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=5000
 mongoURI=""
-RAZOR_PAY_KEY_ID = rzp_test_hv6LKzFbQ6yQcc
-RAZOR_PAY_KEY_SECRET = QKJVDymkDXhIVnkhYvWw7E3L
+RAZOR_PAY_KEY_ID = ""
+RAZOR_PAY_KEY_SECRET = ""
 
 Email_User_id=""
 Password=""
